--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+annotated-types==0.7.0
+anyio==4.8.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
+click==8.1.8
 fastapi==0.115.6
 firebase-admin==6.6.0
+google-api-core==2.24.0
 google-cloud-storage==2.19.0
 pillow==11.1.0
 pydantic==2.10.4
 pytesseract==0.3.13
 requests==2.32.3
+tqdm==4.67.1
+typing_extensions==4.12.2
 uvicorn==0.34.0
-nest_asyncio==1.5.4
+PyMuPDF==1.18.19  # Add this line
